--- a/examples/torchtune/configs/full_finetune.yaml
+++ b/examples/torchtune/configs/full_finetune.yaml
@@ -55,7 +55,7 @@ optimizer:
   lr: 2e-5
 loss:
   _component_: torchtune.modules.loss.CEWithChunkedOutputLoss
-max_steps_per_epoch: null
+max_steps_per_epoch: 10
 gradient_accumulation_steps: 1  # Use to increase virtual batch size
 compile: False  # pytorch compile, set to true for better perf/memory
 optimizer_in_bwd: False  # True saves memory. Requires gradient_accumulation_steps=1
